[feat] Finally enabling front-end contribution

--- a/core/components/com_courses/site/assets/css/course.css
+++ b/core/components/com_courses/site/assets/css/course.css
@@ -487,6 +487,15 @@
 		margin-top: 30px;
 	}
 
+	.manager-options.draft {
+		margin: 0;
+		-webkit-border-radius: 0;
+		   -moz-border-radius: 0;
+		    -ms-border-radius: 0;
+		     -o-border-radius: 0;
+		        border-radius: 0;
+	}
+
 	ul.sub-menu li.add-page {
 		float: right;
 	}
