[fix] Narrow the list selector scope to avoid affecting lists inside the comments

--- a/core/assets/less/comments.less
+++ b/core/assets/less/comments.less
@@ -32,7 +32,7 @@
 				margin: 0;
 				padding: 0;
 
-				li {
+				& > li {
 					padding-left: 30px;
 				}
 			}
@@ -481,7 +481,7 @@
 		li {
 			ol.comments {
 
-				li {
+				& > li {
 					padding-left: 70px;
 				}
 			}
