[fix] Allow replies to project activity to show in group activity feed Group activity feed was not creating the proper group recipient when a comment reply occurred. It also wasn't properly showing project replies nested below the parent project activity. refs: https://qubeshub.org/support/ticket/1225

--- a/core/plugins/groups/activity/assets/css/activity.css
+++ b/core/plugins/groups/activity/assets/css/activity.css
@@ -145,6 +145,11 @@
 	.comment-add .option {
 		width: auto;
 	}
+
+	.comment-add textarea {
+		width: 100%;
+	}
+
 	.comment-add .upload-label {
 		margin-bottom: 0.5em;
 		width: 50%;
