[fix] Set the border radius as a strig and properly use it in the mixin to avoid compilation errors the 'important' is otherwise casing

--- a/core/assets/less/variables.less
+++ b/core/assets/less/variables.less
@@ -248,7 +248,7 @@
 
 // Tags
 // -------------------------
-@tagBorderRadius:           0 3px 3px 0 !important;
+@tagBorderRadius:           "0 3px 3px 0 !important";
 @tagBackground:             #fadea3;
 @tagBackgroundHover:        #f3ae22;
 @tagColor:                  #5a2d00;
