--- a/core/assets/less/tags.less
+++ b/core/assets/less/tags.less
@@ -33,7 +33,7 @@
 		background: @tagBackground !important;
 		color: @tagColor !important;
 		padding: 0.6em 0.5em 0.7em 0.5em !important;
-		.border-radius(@tagBorderRadius);
+		.border-radius(~"@{tagBorderRadius}");
 
 		small.tag-before,
 		&:before {
