[tpl_bmc] Squashed commit of the following...
commit 92531939634a6c09ce2f2be2b2331d1fe0b30235
Author: M. Drew LaMar <mdlama@wm.edu>
Date:   Tue Aug 28 10:53:31 2018 -0400

    [tpl_bmc] Squashed commit of the following...

    commit cfdb082829378de98c8f44338d4c948d60e8c3ac
    Author: M. Drew LaMar <mdlama@wm.edu>
    Date:   Tue Aug 28 10:44:02 2018 -0400

        Removed unnecessary super directory

    commit 4ab9f6add00caaa59df19870607c7a7b62883cef
    Merge: 394763812b 37e27da592
    Author: M. Drew LaMar <mdlama@wm.edu>
    Date:   Sun Aug 26 11:21:23 2018 -0400

        Merge pull request #8 from trisketz/sidebar

        Sidebar

    commit 37e27da59220363e3e37d742cdd9ff8a7d8b9210
    Author: Jenny Kwan <jakwan33@gmail.com>
    Date:   Fri Aug 24 14:57:22 2018 -0500

        Fix sidebar jumping on scroll.

    commit fca6b6744dd091d1937201dee47a6452ccbcba5e
    Author: Jenny Kwan <jakwan33@gmail.com>
    Date:   Fri Aug 24 11:47:34 2018 -0500

        Forgot I had commented out sidebar.js when working on responsiveness. Commenting back in.

    commit 394763812bcfb0799d639d2fca179ea533c5b2d2
    Merge: 35bec4c70a 43bd6fce2b
    Author: M. Drew LaMar <mdlama@wm.edu>
    Date:   Tue Aug 21 10:28:10 2018 -0400

        Merge pull request #6 from trisketz/sidebar

        Sidebar responsiveness

    commit 43bd6fce2b2f287f759749ce47b1cf294715ceb6
    Author: Jenny Kwan <jakwan33@gmail.com>
    Date:   Wed Aug 15 20:43:14 2018 -0500

        Remove group name and only show icon on sticky header on mobile.

    commit c1d7d2e5c0de949a19a216580981f1f191d8f240
    Author: Jenny Kwan <jakwan33@gmail.com>
    Date:   Wed Aug 15 15:27:39 2018 -0500

        Fix conflict with sidebar responsiveness and sidebar scrolling classes.

    commit 4a37cba84d0ffdab67211b178df09e5ec49054fa
    Author: Jenny Kwan <jakwan33@gmail.com>
    Date:   Tue Aug 14 15:03:27 2018 -0500

        Add sidebar responsiveness.

    commit 35759943c99ade225cca2d7031577de629047c17
    Author: Je

--- a/app/templates/bmc/super/assets/css/main.css
+++ b/app/templates/bmc/super/assets/css/main.css
@@ -1,7 +1,7 @@
 /**
  * Template for Test Supergroup
  *
- * Template used for Special Groups. Will now be auto-created 
+ * Template used for Special Groups. Will now be auto-created
  * when admin switches group from type HUB to type Special.
  *
  * @author     HUBzero, M. Drew LaMar
@@ -12,9 +12,9 @@
 	background: #45611F;
 	min-width: inherit;
 }
-/** 
+/**
  * BEGIN header buttons
- * The next two are for the Getting Started buttons in upper left 
+ * The next two are for the Getting Started buttons in upper left
  **/
 #page_options .btn {
 	background: #3f8dc6;
@@ -170,6 +170,7 @@
 	left: 0px;
 }
 .super-group-menu ul ul li {
+	display: block !important; /* Override display: table-cell for submenus on greedy nav */
 	float: none;
 }
 .super-group-menu ul ul li a {
@@ -226,7 +227,7 @@
 	border-color: #000 !important;
 }
 .super-group-toolbar ul.dropdown-menu {
-	left: auto !important; 
+	left: auto !important;
 	right: 0 !important;
 	font-size: 12px !important;
 }
@@ -312,7 +313,7 @@ a:hover {
 	font-size: 1.15em;
 }
 /* Calendar Adjustments */
-.fs-dropdown { 
+.fs-dropdown {
 	font-size: 1.0em;
 }
 /* Forms adjustment */
@@ -347,9 +348,9 @@ as most (if not all) messages are temporary */
 }
 
 /* Group announcements */
-/* Note that javascript in main.js needs to move .super-group-content-wrap down by the vertical 
-height of this element, as we are specifying that .scontainer be below menu but above content. 
-Also note that utilizing javascript is the only way I know how to move this around given it's 
+/* Note that javascript in main.js needs to move .super-group-content-wrap down by the vertical
+height of this element, as we are specifying that .scontainer be below menu but above content.
+Also note that utilizing javascript is the only way I know how to move this around given it's
 automatic element placement by the Hub. */
 .scontainer {
 	position: absolute;
@@ -425,7 +426,7 @@ automatic element placement by the Hub. */
 }
 
 /* Responsive */
-.super-group-menu>ul li.option-select {
+/* .super-group-menu>ul li.option-select {
 	padding: 1em 0;
 	float: none;
 }
@@ -438,13 +439,128 @@ automatic element placement by the Hub. */
 }
 .super-group-menu>ul.js li.option-select select {
 	width: 100%;
+} */
+
+/* Greedy Nav (Priority+ navigation) - lukejacksonn https://codepen.io/lukejacksonn/pen/PwmwWV */
+.super-group-menu {
+	position: relative;
+	min-width: 15.625rem;
+}
+.super-group-menu button {
+	position: absolute;
+	height: 100%;
+	right: 0;
+	padding: 0 0.9375em;
+	border: 0;
+	outline: none;
+	background-color: #628a2c;
+	color: #fff;
+	cursor: pointer;
+	transition: 0.1s ease-in-out;
+}
+.super-group-menu button:hover {
+	background-color: rgba(0,0,0,0.15);
+}
+.super-group-menu button::after {
+	content: attr(count);
+	position: absolute;
+	width: 1.875rem;
+	height: 1.875rem;
+	left: -.5rem;
+	top: .3rem;
+	text-align: center;
+	background-color: #628a2c;
+	color: #fff;
+	font-size: 0.7rem;
+	line-height: 1.5rem;
+	border-radius: 50%;
+	border: 3px solid #fff;
+	font-weight: bold;
+}
+.super-group-menu .hamburger {
+	position: relative;
+	width: 2rem;
+	height: .25rem;
+	background-color: #fff;
+	margin: auto;
+}
+.super-group-menu .hamburger:before,
+.super-group-menu .hamburger:after {
+	content: '';
+	position: absolute;
+	left: 0;
+	width: 2rem;
+	height: .25rem;
+	background-color: #fff;
+}
+.super-group-menu .hamburger:before {
+	top: -.5rem;
+}
+.super-group-menu .hamburger:after {
+	bottom: -.5rem;
+}
+.super-group-menu .visible-links {
+	display: inline-table;
+}
+.super-group-menu .visible-links li {
+	display: table-cell;
+	float: none;
+	white-space: nowrap;
+}
+.super-group-menu .hidden-links {
+	position: absolute;
+	right: 0;
+	top: 100%;
+	left: auto;
+	background-color: #628a2c;
+}
+.super-group-menu .hidden-links li {
+	display: block;
+	float: none;
+}
+.super-group-menu .hidden {
+	visibility: hidden;
 }
 
-@media (min-width: 40em) {
-	.super-group-menu>ul.js li {
-		display: block;
+/* Responsiveness */
+@media (min-width: 340px) and (max-width: 520px) {
+	.super-group-bar .content {
+		position: relative;
 	}
-	.super-group-menu>ul.js li.option-select {
-		display: none;
+	.super-group-bar .content .branding {
+    float: left;
+	}
+	.super-group-bar .content .subnav {
+		position: absolute;
+		right: 0;
+	}
+	.super-group-bar .content .branding .poweredby {
+		display: inline-block;
+	}
+	.super-group-bar .content .subnav > li > a {
+		line-height: 0;
+	}
+	.super-group-bar .content .subnav > li > a.icon.user-account-link:before {
+		line-height: 0;
+	}
+}
+@media (min-width: 340px) and (max-width: 640px) {
+	.header-id {
+		z-index: 1001 !important;
+	}
+}
+
+@media (min-width: 320px) and (max-width: 339px) {
+.super-group-bar .content {
+	display: flex;
+	height: 100%;
+}
+	.super-group-bar .content .subnav {
+		display: flex;
+		height: 100%;
+		margin: 0;
+	}
+	.super-group-bar .content .subnav > li > a {
+		font-size: .6rem;
 	}
 }
