--- a/app/templates/bmc/super/assets/css/sidebar.css
+++ b/app/templates/bmc/super/assets/css/sidebar.css
@@ -13,10 +13,10 @@
     transition: all 0.5s ease;
     overflow: hidden;
 }
- 
+
 #sidebar-wrapper {
     z-index: 149;   /* Place below .super-group-menu-wrap */
-    position: absolute; 
+    position: absolute;
     width: 50px;
     margin-top: 25px;
     margin-bottom: 25px;
@@ -53,12 +53,12 @@
 #sidebar-wrapper:hover {
   width: 250px;
 }
- 
+
 #page-content-wrapper {
     position: absolute;
     padding: 15px;
-    width: 100%;  
-    overflow-x: hidden; 
+    width: 100%;
+    overflow-x: hidden;
 }
 
 /* Make sure dropdown hover menu is above sidebar */
@@ -73,7 +73,7 @@
 }
 
 /* Sidebar Styles */
- 
+
 .sidebar-nav {
     position: relative;
     width: 250px;
@@ -81,9 +81,13 @@
     list-style: none;
     margin: 0;
 }
- 
 
-.sidebar-nav li {
+.more-links {
+  list-style-type: none;
+}
+
+.sidebar-nav li,
+.more-links li {
     text-indent: 15px;
     line-height: 40px;
     margin: 0;
@@ -95,16 +99,20 @@
 }
 
 .sidebar-nav li a,
-.sidebar-nav li span {
+.sidebar-nav li span,
+.more-links li a,
+.more-links li span {
     position: relative;
     display: block;
     text-decoration: none;
     color: #999999;
 }
- 
-.sidebar-nav li a:hover, 
+
+.sidebar-nav li a:hover,
 .sidebar-nav li.active a,
-.sidebar-nav li a:focus {
+.sidebar-nav li a:focus,
+.more-links li a:hover,
+.more-links li a:focus {
     text-decoration: none;
     color: #fff;
     background: rgba(255,255,255,0.2);
@@ -116,10 +124,14 @@
     border-left: none;
 }
 
-.sidebar-nav li a:before, 
-.sidebar-nav li a:after, 
-.sidebar-nav li span:before, 
-.sidebar-nav li span:after {
+.sidebar-nav li a:before,
+.sidebar-nav li a:after,
+.sidebar-nav li span:before,
+.sidebar-nav li span:after,
+.more-links li a:before,
+.more-links li a:after,
+.more-links li span:before,
+.more-links li span:after {
     content: "";
     left: 1.6em;
     top: 0.4em;
@@ -137,7 +149,9 @@
 }
 
 .sidebar-nav li a:before,
-.sidebar-nav li span:before {
+.sidebar-nav li span:before,
+.more-links li a:before,
+.more-links li span:before {
     content: attr(data-icon);
     vertical-align: middle;
     display: inline-block;
@@ -146,11 +160,13 @@
     margin-right: 1.2em;
 }
 
-.sidebar-nav li span:before {
+.sidebar-nav li span:before,
+.more-links li span:before {
     opacity:0.5;
 }
 
-.sidebar-nav li.protected:after {
+.sidebar-nav li.protected:after,
+.more-links li.protected:after {
     content: "\f023";
     position: absolute;
     padding: 0;
@@ -174,27 +190,148 @@
     padding: 0;
 }
 
-#page-menu li span.count {
+.more-links li .meta {
+  position: absolute;
+  right: 2.5em;
+  margin-top: -2.85em;
+  padding: 0;
+}
+
+#page-menu li span.count,
+.more-links li span.count {
     display: inline-block;
     text-align: center;
 }
 
-#page-menu li span.count:before {
+#page-menu li span.count:before,
+.more-links li span.count:before {
     margin: 0;
     width: 0em;
     left: 0.5em;
 }
 
-#page-menu li span.count:after {
+#page-menu li span.count:after,
+.more-links li span.count:after {
     top: inherit;
     width: 0em;
     left: 0.1em;
 }
 
-#page-menu li .meta .count {
+#page-menu li .meta .count,
+.more-links li .meta .count {
     background: rgba(200, 0, 0, 0.5);
     font-size: 0.9em;
     line-height: 1.2;
     padding: 0em 1.2em 0.2em 0em;
     border-radius: 1em;
+}
+
+/* Responsiveness */
+.more-menu {
+  background-color: #000;
+  border: none;
+  display: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 80px;
+  width: 80px;
+  z-index: 200;
+}
+.more-menu:before {
+  font-family: 'Fontcons';
+  content: '\f039';
+  font-size: 1.5em;
+  color: #fff;
+}
+.more-links {
+  position: absolute;
+  top: 80px;
+  display: none;
+  left: 0;
+  width: 100%;
+}
+.links-visible {
+  display: block;
+}
+.fullscreen {
+  height: 100vh;
+  width: 100vh;
+  z-index: 2000 !important; /* Go fullscreen */
+}
+.more-menu-expanded {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
+.no-scroll {
+  overflow: hidden
+ }
+ .hide {
+   display: none;
+ }
+@media (min-width: 320px) and (max-width: 480px) {
+  .more-menu {
+    display: block;
+  }
+	#sidebar-wrapper {
+    position: fixed !important;
+    bottom: 0 !important;
+    left: 0;
+    top: initial !important;
+    margin: 0;
+    width: 100%;
+  }
+  #sidebar-wrapper:hover {
+    width: 100%;
+  }
+  .sidebar-nav {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 80px;
+    text-align: center;
+    overflow: hidden;
+  }
+  .sidebar-nav li {
+    position: relative;
+    display: inline-block;
+    width: 80px;
+  }
+  .sidebar-nav li a {
+    text-align: center;
+    white-space: normal;
+    overflow: hidden;
+  }
+  .sidebar-nav li a:before {
+    height: 2em;
+    vertical-align: -50%;
+    margin-left: 0;
+    margin-right: 1.5em;
+  }
+  .sidebar-nav li a:hover,
+  .sidebar-nav li.active a,
+  .sidebar-nav li a:focus {
+    border: none;
+  }
+  #page-menu li .meta {
+    margin-top: -6.5em !important;
+    top: 5.7em;
+    right: auto;
+    left: 1.5em;
+  }
+  #page-menu li .meta .count {
+    font-size: .7em;
+    line-height: .7;
+  }
+}
+@media (min-width: 360px) and (max-width: 375px) {
+  .sidebar-nav li {
+    width: 70px;
+  }
+}
+@media (min-width: 320px) and (max-width: 359px) {
+  .sidebar-nav li {
+    width: 60px;
+  }
 }
